--- a/tox.ini
+++ b/tox.ini
@@ -27,3 +27,8 @@ deps =
 commands =
     {[testenv:build]commands}
     twine upload --skip-existing dist/*
+
+# Linter
+[flake8]
+exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
+max-line-length = 90
